2019-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (InitializeLogInfo): Using the compiled-in
	defaults, always log to stderr by default, even under Microsoft
	Windows.  The logging output may then be diverted to
	'win32eventlog' as soon as a log.mgk file is loaded if that is
	desired.  This should not be much of a problem because loading a
	log.mgk file is the first thing that the library attempts to do.
	This change is made due to users and developers being baffled at
	not seeing any log output due to the log output going to the (very
	unfriendly) Windows application log.

	* webp: libwebp is updated to the 1.0.3 release.

2019-12-15  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* magick/nt_base.c Fix user only installation of Ghostscript.

2019-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in (DIRSEP): DIRSEP should always use Unix conventions for
	Autotools-based builds.

	* magick/module.h ("C"): Eliminiate redundant and conflicting
	ListModuleInfo() prototype.

	* coders/miff.c (ReadMIFFImage): Eliminate warnings in trace
	statements.

	* coders/dib.c (DecodeImage): Eliminate warnings in trace
	statements.

	* coders/bmp.c (DecodeImage): Eliminate warnings in trace
	statements.

	* magick/studio.h (SupportMagickModules): Fix the preprocessor
	logic controlling SupportMagickModules, which became broken for
	GCC MinGW-based builds starting in the 1.3.29 release when a
	"static" module loader was implemented.  Due to an error in the
	preprocessor logic, only the "modules" based build was working for
	MinGW.  Much thanks to Giovanni Remigi for making us aware of this
	issue.

2019-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (WritePICTImage): Throw a writer exception if the
	PICT width limit is exceeded. Fixes SourceForge issue 617
	"heap-buffer-overflow in function EncodeImage of coders/pict.c".

2019-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
