@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020191215"
-#define public MagickPackageReleaseDate "snapshot-20191215"
+#define public MagickPackageVersionAddendum ".020191216"
+#define public MagickPackageReleaseDate "snapshot-20191216"
